--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     html,body{width:100%;height:100%;overflow-x:hidden}
     body {
       font-family:'Vazirmatn',sans-serif;
-      background:#000;
+      background:radial-gradient(circle at center,#002a52 0%,#00162d 100%);
       color:white;
       text-align:center;
       display:flex;
@@ -39,11 +39,11 @@
       height:150px;
       margin:25px auto 16px;
       border-radius:50%;
-      box-shadow:0 8px 22px rgba(255,220,150,0.5);
+      box-shadow:0 0 25px rgba(0,200,255,0.4);
       animation:floatMove 6s ease-in-out infinite;
       background:rgba(255,255,255,0.05);
       position:relative;
-      overflow:visible;
+      overflow:hidden;
     }
     .profile-container svg {
       width:100%;
@@ -62,17 +62,17 @@
     .title-line {
       font-size:clamp(1.6rem,5vw,2.4rem);
       font-weight:800;
-      background:linear-gradient(90deg,#fff2a8,#ffc94d,#ffb400);
+      background:linear-gradient(90deg,#00e0ff,#00aaff,#0077ff);
       -webkit-background-clip:text;-webkit-text-fill-color:transparent;
-      text-shadow:0 0 12px rgba(255,211,108,0.6);
+      text-shadow:0 0 15px rgba(0,180,255,0.7);
       animation:glowPulse 4s ease-in-out infinite;
     }
     .title-sub {
       font-size:clamp(1rem,3vw,1.2rem);
-      color:#ffddaa;
+      color:#88d6ff;
       font-weight:600;
       margin-top:4px;
-      text-shadow:0 1px 3px rgba(0,0,0,0.4);
+      text-shadow:0 1px 4px rgba(0,180,255,0.4);
     }
 
     .link-bar {
@@ -90,8 +90,8 @@
       transition:all 0.3s ease;
     }
     .link-bar a:hover {
-      background:rgba(255,255,255,0.25);
-      box-shadow:0 0 12px rgba(255,200,100,0.7);
+      background:rgba(0,200,255,0.2);
+      box-shadow:0 0 15px rgba(0,200,255,0.6);
       transform:translateY(-2px);
     }
 
@@ -132,15 +132,12 @@
 
     @keyframes fadeInUp {to {opacity:1;transform:translateY(0)}}
     @keyframes glowPulse {
-      0%,100%{text-shadow:0 0 8px rgba(255,211,108,0.6)}
-      50%{text-shadow:0 0 14px rgba(255,211,108,1)}
+      0%,100%{text-shadow:0 0 8px rgba(0,180,255,0.6)}
+      50%{text-shadow:0 0 18px rgba(0,220,255,1)}
     }
 
     @media(max-width:480px){
-      .profile-container{
-        width:120px;
-        height:120px;
-      }
+      .profile-container{width:120px;height:120px}
       .link-bar{gap:6px}
       .link-bar a{padding:6px 10px}
     }
@@ -156,12 +153,8 @@
 
   <div class="profile-container">
     <svg viewBox="0 0 100 100" preserveAspectRatio="xMidYMid slice">
-      <defs>
-        <clipPath id="circleView">
-          <circle cx="50" cy="50" r="50"/>
-        </clipPath>
-      </defs>
-      <image clip-path="url(#circleView)" href="https://bayanbox.ir/view/6333081801587349279/Saeed2.jpg" width="100" height="100" preserveAspectRatio="xMidYMid slice"/>
+      <defs><clipPath id="circleView"><circle cx="50" cy="50" r="50"/></clipPath></defs>
+      <image clip-path="url(#circleView)" href="https://bayanbox.ir/view/6333081801587349279/Saeed2.jpg" width="100" height="100"/>
     </svg>
   </div>
 
@@ -173,8 +166,7 @@
   <div class="link-bar" id="links"></div>
 
   <div class="frame-wrapper">
-    <iframe src="https://www.aparat.com/video/video/embed/videohash/x722241/vt/frame?autoplay=false"
-      allow="autoplay; fullscreen" allowfullscreen></iframe>
+    <iframe src="https://www.aparat.com/video/video/embed/videohash/x722241/vt/frame?autoplay=false" allow="autoplay; fullscreen" allowfullscreen></iframe>
   </div>
 
   <div class="footer">
@@ -182,114 +174,26 @@
   </div>
 
   <script defer>
-    const data = {
-      fa:{title:"دکتر سعید مجتبی‌زاده",sub:"فوق‌دکتری مهندسی ژئوتکنیک لرزه‌ای",links:[
-        {text:"پایگاه شخصی",href:"http://mojtabazadeh.ir/"},
-        {text:"پایگاه مقالات",href:"http://www.drmojtabazadeh.ir/"},
-        {text:"پایگاه مطالعات",href:"http://www.smojtabazadeh.ir/"},
-        {text:"اینستاگالری",href:"https://www.instagallery.ir/"},
-        {text:"پایگاه اَپرچِر",href:"https://www.mojtabazadeh-hasanlouei.ir/"},
-        {text:"گوگل اسکالر",href:"https://scholar.google.com/citations?user=YphpjTcAAAAJ&hl=en"},
-        {text:"پروفایل اورکید",href:"https://orcid.org/0000-0001-8508-4837"},
-        {text:"پایگاه انگلیسی",href:"https://www.mojtabazade.ir/"},
-      ]},
-      en:{title:"Dr. Saeed Mojtabazadeh",sub:"Postdoctoral Fellow in Geotechnical Engineering",links:[
-        {text:"Personal Website",href:"http://mojtabazadeh.ir/"},
-        {text:"Research Articles",href:"http://www.drmojtabazadeh.ir/"},
-        {text:"Study Hub",href:"http://www.smojtabazadeh.ir/"},
-        {text:"Instagallery",href:"https://www.instagallery.ir/"},
-        {text:"Aperture Hub",href:"https://www.mojtabazadeh-hasanlouei.ir/"},
-        {text:"Google Scholar",href:"https://scholar.google.com/citations?user=YphpjTcAAAAJ&hl=en"},
-        {text:"ORCID Profile",href:"https://orcid.org/0000-0001-8508-4837"},
-        {text:"English Website",href:"https://www.mojtabazade.ir/"},
-      ]}
-    };
-
-    const mainTitle=document.getElementById("main-title"),
-          subTitle=document.getElementById("sub-title"),
-          linksContainer=document.getElementById("links");
-
-    function buildLinks(lang){
-      linksContainer.innerHTML="";
-      data[lang].links.forEach(l=>{
-        const a=document.createElement("a");
-        a.href=l.href;a.target="_blank";a.textContent=l.text;
-        linksContainer.appendChild(a);
-      });
-    }
-
-    function switchLang(lang){
-      localStorage.setItem("lang",lang);
-      document.body.classList.add("smooth-switch");
-      setTimeout(()=>{
-        mainTitle.textContent=data[lang].title;
-        subTitle.textContent=data[lang].sub;
-        buildLinks(lang);
-        if(lang==="en"){
-          document.body.classList.add("lang-en");
-          document.documentElement.dir="ltr";
-        } else {
-          document.body.classList.remove("lang-en");
-          document.documentElement.dir="rtl";
-        }
-      },300);
-      setTimeout(()=>document.body.classList.remove("smooth-switch"),900);
-    }
-
-    const savedLang=localStorage.getItem("lang")||"fa";
-    switchLang(savedLang);
-    document.getElementById("btn-fa").onclick=()=>switchLang("fa");
-    document.getElementById("btn-en").onclick=()=>switchLang("en");
+    const data={fa:{title:"دکتر سعید مجتبی‌زاده",sub:"فوق‌دکتری مهندسی ژئوتکنیک لرزه‌ای",links:[
+      {text:"پایگاه شخصی",href:"http://mojtabazadeh.ir/"},{text:"پایگاه مقالات",href:"http://www.drmojtabazadeh.ir/"},
+      {text:"پایگاه مطالعات",href:"http://www.smojtabazadeh.ir/"},{text:"اینستاگالری",href:"https://www.instagallery.ir/"},
+      {text:"پایگاه اَپرچِر",href:"https://www.mojtabazadeh-hasanlouei.ir/"},{text:"گوگل اسکالر",href:"https://scholar.google.com/citations?user=YphpjTcAAAAJ&hl=en"},
+      {text:"پروفایل اورکید",href:"https://orcid.org/0000-0001-8508-4837"},{text:"پایگاه انگلیسی",href:"https://www.mojtabazade.ir/"}],
+      en:{title:"Dr. Saeed Mojtabazadeh",sub:"Postdoctoral Fellow in Geotechnical Engineering",links:[]}};
+    const mainTitle=document.getElementById("main-title"),subTitle=document.getElementById("sub-title"),linksContainer=document.getElementById("links");
+    function buildLinks(lang){linksContainer.innerHTML="";data[lang].links.forEach(l=>{const a=document.createElement("a");a.href=l.href;a.target="_blank";a.textContent=l.text;linksContainer.appendChild(a)})}
+    function switchLang(lang){localStorage.setItem("lang",lang);document.body.classList.add("smooth-switch");setTimeout(()=>{mainTitle.textContent=data[lang].title;subTitle.textContent=data[lang].sub;buildLinks(lang);if(lang==="en"){document.body.classList.add("lang-en");document.documentElement.dir="ltr"}else{document.body.classList.remove("lang-en");document.documentElement.dir="rtl"}},300);setTimeout(()=>document.body.classList.remove("smooth-switch"),900)}
+    const savedLang=localStorage.getItem("lang")||"fa";switchLang(savedLang);
+    document.getElementById("btn-fa").onclick=()=>switchLang("fa");document.getElementById("btn-en").onclick=()=>switchLang("en");
 
     const canvas=document.getElementById("particles"),ctx=canvas.getContext("2d");
     let particles=[];
-    function createParticles(){
-      const count=Math.floor((window.innerWidth*window.innerHeight)/12000);
-      particles=Array.from({length:count},()=>({
-        x:Math.random()*window.innerWidth,
-        y:Math.random()*window.innerHeight,
-        r:Math.random()*1.8+1,
-        dx:(Math.random()-0.5)*0.4,
-        dy:(Math.random()-0.5)*0.4
-      }));
-    }
-    function resizeParticles(){
-      const ratio=window.devicePixelRatio||1;
-      canvas.width=window.innerWidth*ratio;
-      canvas.height=window.innerHeight*ratio;
-      ctx.setTransform(1,0,0,1,0,0);
-      ctx.scale(ratio,ratio);
-      createParticles();
-    }
-    resizeParticles();
-    window.addEventListener("resize",resizeParticles);
+    function randomBlue(){const colors=["#00e0ff","#00aaff","#0077ff","#33f2ff"];return colors[Math.floor(Math.random()*colors.length)]}
+    function createParticles(){const count=Math.floor((window.innerWidth*window.innerHeight)/11000);particles=Array.from({length:count},()=>({x:Math.random()*window.innerWidth,y:Math.random()*window.innerHeight,r:Math.random()*2+1,dx:(Math.random()-0.5)*0.5,dy:(Math.random()-0.5)*0.5,color:randomBlue()}))}
+    function resizeParticles(){const ratio=window.devicePixelRatio||1;canvas.width=window.innerWidth*ratio;canvas.height=window.innerHeight*ratio;ctx.setTransform(1,0,0,1,0,0);ctx.scale(ratio,ratio);createParticles()}
+    resizeParticles();window.addEventListener("resize",resizeParticles);
 
-    (function draw(){
-      ctx.clearRect(0,0,window.innerWidth,window.innerHeight);
-      ctx.fillStyle="rgba(255,220,150,0.8)";
-      particles.forEach(p=>{
-        ctx.beginPath();ctx.arc(p.x,p.y,p.r,0,Math.PI*2);ctx.fill();
-        p.x+=p.dx;p.y+=p.dy;
-        if(p.x<0||p.x>window.innerWidth)p.dx*=-1;
-        if(p.y<0||p.y>window.innerHeight)p.dy*=-1;
-      });
-      ctx.strokeStyle="rgba(255,220,150,0.2)";
-      ctx.lineWidth=0.5;
-      for(let i=0;i<particles.length;i++){
-        for(let j=i+1;j<particles.length;j++){
-          const dx=particles[i].x-particles[j].x;
-          const dy=particles[i].y-particles[j].y;
-          const dist=Math.sqrt(dx*dx+dy*dy);
-          if(dist<120){
-            ctx.beginPath();
-            ctx.moveTo(particles[i].x,particles[i].y);
-            ctx.lineTo(particles[j].x,particles[j].y);
-            ctx.stroke();
-          }
-        }
-      }
-      requestAnimationFrame(draw);
-    })();
+    (function draw(){ctx.clearRect(0,0,window.innerWidth,window.innerHeight);particles.forEach(p=>{ctx.beginPath();ctx.shadowColor=p.color;ctx.shadowBlur=8;ctx.fillStyle=p.color;ctx.arc(p.x,p.y,p.r,0,Math.PI*2);ctx.fill();p.x+=p.dx;p.y+=p.dy;if(p.x<0||p.x>window.innerWidth)p.dx*=-1;if(p.y<0||p.y>window.innerHeight)p.dy*=-1});ctx.shadowBlur=0;for(let i=0;i<particles.length;i++){for(let j=i+1;j<particles.length;j++){const dx=particles[i].x-particles[j].x;const dy=particles[i].y-particles[j].y;const dist=Math.sqrt(dx*dx+dy*dy);if(dist<130){const gradient=ctx.createLinearGradient(particles[i].x,particles[i].y,particles[j].x,particles[j].y);gradient.addColorStop(0,particles[i].color);gradient.addColorStop(1,particles[j].color);ctx.strokeStyle=gradient;ctx.lineWidth=0.6;ctx.beginPath();ctx.moveTo(particles[i].x,particles[i].y);ctx.lineTo(particles[j].x,particles[j].y);ctx.stroke()}}}requestAnimationFrame(draw)})();
   </script>
 </body>
 </html>
