--- a/index.html
+++ b/index.html
@@ -7,13 +7,11 @@
   <meta name="description" content="فوق‌دکتری مهندسی عمران-ژئوتکنیک لرزه‌ای">
   <meta name="keywords" content="دکتر سعید مجتبی‌زاده, Saeed Mojtabazadeh, ژئوتکنیک, پژوهشگر, نوآوری علمی">
   <meta name="author" content="Saeed Mojtabazadeh">
-
   <meta property="og:title" content="دکتر سعید مجتبی‌زاده">
   <meta property="og:description" content="پایگاه دکتر سعید مجتبی‌زاده">
   <meta property="og:image" content="https://bayanbox.ir/view/6333081801587349279/Saeed2.jpg">
   <meta property="og:url" content="http://www.mojtabazadeh.ir/">
   <meta name="twitter:card" content="summary_large_image">
-
   <link rel="icon" type="image/png" sizes="512x512" href="https://github.com/mojtabazadeh/saeedmojtabazadeh.github.io/blob/main/favicon.png?raw=true">
   <link href="https://fonts.googleapis.com/css2?family=Vazirmatn:wght@400;600;800&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 
@@ -46,15 +44,8 @@
       position:relative;
       overflow:visible;
     }
-    .profile-container svg {
-      width:100%;
-      height:100%;
-      display:block;
-    }
-    @keyframes floatMove {
-      0%,100%{transform:translateY(0)}
-      50%{transform:translateY(-6px)}
-    }
+    .profile-container svg {width:100%;height:100%;display:block;}
+    @keyframes floatMove {0%,100%{transform:translateY(0)}50%{transform:translateY(-6px)}}
 
     .title-wrapper {
       max-width:90vw;margin-bottom:20px;
@@ -105,43 +96,72 @@
     }
     .frame-wrapper iframe {width:100%;height:100%;border:none;display:block;border-radius:16px}
 
+    .about {
+      max-width:900px;
+      margin:25px auto 10px;
+      text-align:justify;
+      background:rgba(255,255,255,0.05);
+      padding:15px;
+      border-radius:12px;
+      line-height:1.8;
+      font-size:clamp(0.85rem,2.5vw,1rem);
+      color:#f5eaff;
+      box-shadow:0 0 10px rgba(255,255,255,0.1);
+    }
+
     .footer {font-size:0.8rem;margin-top:18px;opacity:0.7}
     .footer a {color:white;text-decoration:none}
 
-    .lang-switch {
-      position:fixed;top:12px;left:12px;display:flex;gap:6px;z-index:99;
+    .lang-switch, .contact-switch {
+      position:fixed;top:12px;display:flex;gap:6px;z-index:99;
     }
-    .lang-switch button {
+    .lang-switch {left:12px;}
+    .contact-switch {right:12px;}
+    .lang-switch button, .contact-switch button {
       background:rgba(255,255,255,0.15);
       color:white;border:none;padding:6px 12px;
       border-radius:50px;cursor:pointer;font-size:0.8rem;
       transition:all 0.3s ease;
     }
-    .lang-switch button:hover {
+    .lang-switch button:hover, .contact-switch button:hover {
       background:rgba(255,255,255,0.3);transform:scale(1.05);
     }
 
-    .smooth-switch {
-      animation: smoothFadeSlide 0.9s ease;
+    .modal {
+      position:fixed;top:0;left:0;width:100%;height:100%;
+      background:rgba(0,0,0,0.5);backdrop-filter:blur(5px);
+      display:flex;align-items:center;justify-content:center;
+      visibility:hidden;opacity:0;transition:opacity 0.3s ease;
+      z-index:999;
     }
+    .modal.show {visibility:visible;opacity:1;}
+    .modal-content {
+      background:rgba(255,255,255,0.15);
+      color:white;padding:20px 30px;border-radius:12px;
+      max-width:300px;text-align:center;
+      box-shadow:0 0 15px rgba(200,150,255,0.6);
+      line-height:1.6;
+    }
+    .modal-content h3 {margin-bottom:10px;font-size:1rem;}
+    .close-btn {
+      margin-top:10px;background:rgba(255,255,255,0.2);
+      border:none;color:white;padding:5px 12px;border-radius:8px;
+      cursor:pointer;transition:all 0.3s ease;
+    }
+    .close-btn:hover {background:rgba(255,255,255,0.4);}
+
+    .smooth-switch {animation:smoothFadeSlide 0.9s ease;}
     @keyframes smoothFadeSlide {
       0%{opacity:1;transform:translateY(0)}
       40%{opacity:0;transform:translateY(-15px)}
       60%{opacity:0;transform:translateY(15px)}
       100%{opacity:1;transform:translateY(0)}
     }
-
     @keyframes fadeInUp {to {opacity:1;transform:translateY(0)}}
-    @keyframes glowPulse {
-      0%,100%{text-shadow:0 0 8px rgba(200,150,255,0.6)}
-      50%{text-shadow:0 0 14px rgba(200,150,255,1)}
-    }
+    @keyframes glowPulse {0%,100%{text-shadow:0 0 8px rgba(200,150,255,0.6)}50%{text-shadow:0 0 14px rgba(200,150,255,1)}}
 
     @media(max-width:480px){
-      .profile-container{
-        width:120px;
-        height:120px;
-      }
+      .profile-container{width:120px;height:120px}
       .link-bar{gap:6px}
       .link-bar a{padding:6px 10px}
     }
@@ -154,14 +174,14 @@
     <button id="btn-fa">Fa</button>
     <button id="btn-en">En</button>
   </div>
+  <div class="contact-switch">
+    <button id="btn-email">Email</button>
+    <button id="btn-call">Call</button>
+  </div>
 
   <div class="profile-container">
     <svg viewBox="0 0 100 100" preserveAspectRatio="xMidYMid slice">
-      <defs>
-        <clipPath id="circleView">
-          <circle cx="50" cy="50" r="50"/>
-        </clipPath>
-      </defs>
+      <defs><clipPath id="circleView"><circle cx="50" cy="50" r="50"/></clipPath></defs>
       <image clip-path="url(#circleView)" href="https://bayanbox.ir/view/6333081801587349279/Saeed2.jpg" width="100" height="100" preserveAspectRatio="xMidYMid slice"/>
     </svg>
   </div>
@@ -174,41 +194,75 @@
   <div class="link-bar" id="links"></div>
 
   <div class="frame-wrapper">
-    <iframe src="https://www.aparat.com/video/video/embed/videohash/x722241/vt/frame?autoplay=false"
-      allow="autoplay; fullscreen" allowfullscreen></iframe>
+    <iframe src="https://www.aparat.com/video/video/embed/videohash/x722241/vt/frame?autoplay=false" allow="autoplay; fullscreen" allowfullscreen></iframe>
   </div>
 
+  <div class="about" id="about-text"></div>
+
   <div class="footer">
-    © <a href="http://www.mojtabazadeh.ir/" target="_blank">Saeed Mojtabazadeh | www.mojtabazadeh.ir</a>
+    © <a href="http://www.mojtabazadeh.ir/" target="_blank" id="footer-name">سعید مجتبی زاده</a>
+  </div>
+
+  <!-- Modal -->
+  <div class="modal" id="contact-modal">
+    <div class="modal-content">
+      <h3 id="contact-title">تماس</h3>
+      <p id="contact-info"></p>
+      <button class="close-btn" id="close-modal">بستن</button>
+    </div>
   </div>
 
   <script defer>
     const data = {
-      fa:{title:"دکتر سعید مجتبی‌زاده",sub:"فوق‌دکتری مهندسی عمران-ژئوتکنیک لرزه‌ای",links:[
-        {text:"پایگاه شخصی",href:"http://mojtabazadeh.ir/"},
-        {text:"پایگاه مقالات",href:"http://www.drmojtabazadeh.ir/"},
-        {text:"پایگاه مطالعات",href:"http://www.smojtabazadeh.ir/"},
-        {text:"اینستاگالری",href:"https://www.instagallery.ir/"},
-        {text:"پایگاه اَپرچِر",href:"http://mojtabazadeh-hasanlouei.ir/"},
-        {text:"گوگل اسکالر",href:"https://scholar.google.com/citations?user=YphpjTcAAAAJ&hl=en"},
-        {text:"پروفایل اُرکید",href:"https://orcid.org/0000-0001-8508-4837"},
-        {text:"پایگاه انگلیسی",href:"https://www.mojtabazade.ir/"},
-      ]},
-      en:{title:"Dr. Saeed Mojtabazadeh",sub:"Postdoc Fellow in Geotechnical Engineering",links:[
-        {text:"Website",href:"http://mojtabazadeh.ir/"},
-        {text:"Researches",href:"http://www.drmojtabazadeh.ir/"},
-        {text:"Study Hub",href:"http://www.smojtabazadeh.ir/"},
-        {text:"Instagallery",href:"https://www.instagallery.ir/"},
-        {text:"Aperture",href:"http://mojtabazadeh-hasanlouei.ir/"},
-        {text:"Google Scholar",href:"https://scholar.google.com/citations?user=YphpjTcAAAAJ&hl=en"},
-        {text:"ORCID",href:"https://orcid.org/0000-0001-8508-4837"},
-        {text:"English Website",href:"https://www.mojtabazade.ir/"},
-      ]}
+      fa:{
+        title:"دکتر سعید مجتبی‌زاده",
+        sub:"فوق‌دکتری مهندسی عمران-ژئوتکنیک لرزه‌ای",
+        links:[
+          {text:"پایگاه شخصی",href:"http://mojtabazadeh.ir/"},
+          {text:"پایگاه مقالات",href:"http://www.drmojtabazadeh.ir/"},
+          {text:"پایگاه مطالعات",href:"http://www.smojtabazadeh.ir/"},
+          {text:"اینستاگالری",href:"https://www.instagallery.ir/"},
+          {text:"پایگاه اَپرچِر",href:"http://mojtabazadeh-hasanlouei.ir/"},
+          {text:"گوگل اسکالر",href:"https://scholar.google.com/citations?user=YphpjTcAAAAJ&hl=en"},
+          {text:"پروفایل اُرکید",href:"https://orcid.org/0000-0001-8508-4837"},
+          {text:"پایگاه انگلیسی",href:"https://www.mojtabazade.ir/"},
+        ],
+        about:`دکتر سعید مجتبی‌زاده حسنلوئی، به عنوان اولین پژوهشگر پسادکتری مهندسی عمران-ژئوتکنیک در ایران، از سال 1394 بر توسعه‌ی الگوریتم‌های محاسباتی و مدلسازی عددی پیشرفته در حوزه‌ی ژئومکانیک لرزه‌ای متمرکز شده است. او رساله‌ی دوره‌ی دکتری تخصصی و طرح پژوهشی پسادکتری خویش را بر مسأله‌ی انتشار و پراکنش امواج لرزه‌ای در محیط‌های با خواص اورتوتروپیک از جمله عوارض توپوگرافی گوناگون، با استفاده از روش اجزای مرزی نیم‌فضای مستقیم در حوزه‌ی زمان معطوف نموده است. از موضوعات پژوهشی مورد علاقه‌ی وی می‌توان به توسعه‌ی روش‌های عددی همچون روش اجزای مرزی، اجزای محدود و رویکردهای ترکیبی جهت مدلسازی و تحلیل عددی مسائل لرزه‌ای، بررسی اثرات ساختگاهی ناشی از حضور عوارض توپوگرافی سطحی و زیر‌سطحی، مکانیک محیط‌های نانو/متخلخل و ایزولاسیون لرزه‌ای اشاره نمود.`,
+        footer:"سعید مجتبی زاده",
+        contactTitle:"تماس",
+        contactInfo:"ایمیل: mojtabazadeh@outlook.com<br>تلفن: +989334115773",
+        close:"بستن"
+      },
+      en:{
+        title:"Dr. Saeed Mojtabazadeh",
+        sub:"Postdoc Fellow in Geotechnical Engineering",
+        links:[
+          {text:"Website",href:"http://mojtabazadeh.ir/"},
+          {text:"Researches",href:"http://www.drmojtabazadeh.ir/"},
+          {text:"Study Hub",href:"http://www.smojtabazadeh.ir/"},
+          {text:"Instagallery",href:"https://www.instagallery.ir/"},
+          {text:"Aperture",href:"http://mojtabazadeh-hasanlouei.ir/"},
+          {text:"Google Scholar",href:"https://scholar.google.com/citations?user=YphpjTcAAAAJ&hl=en"},
+          {text:"ORCID",href:"https://orcid.org/0000-0001-8508-4837"},
+          {text:"English Website",href:"https://www.mojtabazade.ir/"},
+        ],
+        about:`Dr. Saeed Mojtabazadeh is the pioneering geotechnical engineering postdoctoral researcher in Iran, specializing in computational algorithms. Since 2016, Dr. Mojtabazadeh has been dedicated to advanced numerical modeling in seismic geomechanics. His Ph.D. thesis and postdoctoral research focus on investigating SH-wave propagation in orthotropic mediums, along with topographic features, utilizing an exclusive approach known as the Direct Half-Space Time-Domain Boundary Element Method. He has developed multiple numerical approaches, including the Boundary Element Method (BEM), Finite Element Method (FEM), and Hybrid methods, applied to seismic analysis in geotechnical engineering.`,
+        footer:"Saeed Mojtabazadeh",
+        contactTitle:"Contact",
+        contactInfo:"Email: mojtabazadeh@outlook.com<br>Phone: +989334115773",
+        close:"Close"
+      }
     };
 
     const mainTitle=document.getElementById("main-title"),
           subTitle=document.getElementById("sub-title"),
-          linksContainer=document.getElementById("links");
+          linksContainer=document.getElementById("links"),
+          aboutText=document.getElementById("about-text"),
+          footerName=document.getElementById("footer-name"),
+          contactModal=document.getElementById("contact-modal"),
+          contactTitle=document.getElementById("contact-title"),
+          contactInfo=document.getElementById("contact-info"),
+          closeModal=document.getElementById("close-modal");
 
     function buildLinks(lang){
       linksContainer.innerHTML="";
@@ -225,6 +279,11 @@
       setTimeout(()=>{
         mainTitle.textContent=data[lang].title;
         subTitle.textContent=data[lang].sub;
+        aboutText.innerHTML=data[lang].about;
+        footerName.textContent=data[lang].footer;
+        contactTitle.textContent=data[lang].contactTitle;
+        contactInfo.innerHTML=data[lang].contactInfo;
+        closeModal.textContent=data[lang].close;
         buildLinks(lang);
         if(lang==="en"){
           document.body.classList.add("lang-en");
@@ -241,6 +300,15 @@
     switchLang(savedLang);
     document.getElementById("btn-fa").onclick=()=>switchLang("fa");
     document.getElementById("btn-en").onclick=()=>switchLang("en");
+
+    document.getElementById("btn-email").onclick=()=>{
+      contactModal.classList.add("show");
+    };
+    document.getElementById("btn-call").onclick=()=>{
+      contactModal.classList.add("show");
+    };
+    closeModal.onclick=()=>contactModal.classList.remove("show");
+    contactModal.onclick=e=>{if(e.target===contactModal)contactModal.classList.remove("show")};
 
     const canvas=document.getElementById("particles"),ctx=canvas.getContext("2d");
     let particles=[];
